--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,3 +1,5 @@
 product-property=Product Profile Dev
 
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
+
+app.testProp=Propiedad de prueba
