--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -2,4 +2,4 @@ product-property=Product Profile Dev
 
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
 
-app.testProp=Propiedad de prueba ACTUALIZADA
+app.testProp=Propiedad de prueba ACTUALIZADA 2da vez
